--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ JWT_ACCESS_SECRET = jwt-access-secret-key
 JWT_REFRESH_SECRET = jwt-refresh-secret-key
 
 CLIENT_URL = http://localhost:5173
+
+JWT_ADMIN_SECRET = jwt-admin-secret-key
